--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                     <font size="5" color="white">EMAIL ID</font>
                 </label>  </td>
                 <td width="1002">
-                    <font size="5" color="white"><input type="text" size="30" maxlength="30" id="email"></font>
+                    <font size="5" color="white"><input type="email" size="30" maxlength="30" id="email"></font>
                 </td>
 
             </tr>
